[package]
name = "labgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17.13"
gif = "0.13.1"
rand = { version = "0.8.5", features = ["std_rng"] }
clap = { version = "4.5.23", features = ["derive"] }
regex = "1.11.1"
