[package]
name = "labgen"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17.13"
gif = "0.13.1"
rand = { version = "0.9.0", features = ["std_rng"] }
clap = { version = "4.5.36", features = ["derive"] }
regex = "1.11.1"
